# fmt-console-pm

./: README.md  hub-manifest.json
base/: CMakeLists.txt  README.md
base/src/: main.cpp
overlays/conan/: conanfile.txt
overlays/none/: CMakeLists.txt
overlays/none/src/: main.cpp
overlays/vcpkg/: CMakePresets.json  vcpkg.json
